--- a/templates/src/css/main.scss
+++ b/templates/src/css/main.scss
@@ -3,6 +3,7 @@
 @import "bootstrap";
 @import "ababool/ababool";
 @import "ababool_theme/theme";
+@import "blog/blog";
 @import "mainmenu/mainmenu";
 @import "footer/footer";
 @import "preloader/preloader";
