--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -21,7 +21,7 @@ block content
             data-up= value.up
             data-ajax = value.ajax
             animationend="endpage"
-            class="pt-page"
+            class="pt-page " + value.class 
             )
               div(
               class="container clearfix"
