--- a/templates/views/pages/contents.jade
+++ b/templates/views/pages/contents.jade
@@ -1,91 +1,88 @@
 
 
+include blog/contents.jade
+
+
 if index=="home"
-  include home.jade
+  include sections/home.jade
 
 if index=="what"
-  include what.jade
+  include sections/what.jade
 
 if index=="how"
-  include how.jade
+  include sections/how.jade
 
 if index=="wow"
-  include wow.jade
+  include wow/wow.jade
 
 if index=="with"
-  include with.jade
+  include sections/with.jade
 
 if index=="start"
-  include start.jade
+  include sections/start.jade
 
 if index=="license"
-  include license.jade
+  include footer/license.jade
 
 if index=="about"
-  include about.jade
+  include footer/about.jade
 
 if index=="contact"
-  include contact.jade
+  include footer/contact.jade
 
 if index=="feedbacks"
-  include feedbacks.jade
-
-if index=="todo"
-  include todo.jade
+  include feedbacks/feedbacks.jade
 
 if index=="plugins"
   include plugins.jade
 
 if index=="sitemap"
-  include sitemap.jade
+  include footer/sitemap.jade
 
 if index=="donate"
   include donate.jade
 
 if index=="transitions"
-  include transitions.jade
+  include wow/transitions.jade
 
 if index=="transitions2"
-  include transitions2.jade
+  include wow/transitions2.jade
 
 if index=="map"
-  include map.jade
+  include wow/map.jade
 
 if index=="youtube"
-  include youtube.jade
+  include wow/youtube.jade
 
 if index=="ajax1"
-  include ajax1.jade
+  include wow/ajax1.jade
 
 if index=="form"
-  include form.jade
+  include feedbacks/form.jade
 
 if index=="suscribe"
-  include suscribe.jade
+  include wow/suscribe.jade
 
 if index=="navigator"
-  include navigator.jade
+  include navigator/navigator.jade
 
 if index=="left"
-  include left.jade
+  include navigator/left.jade
 
 if index=="right"
-  include right.jade
+  include navigator/right.jade
 
 if index=="up"
-  include up.jade
+  include navigator/up.jade
 
 if index=="down"
-  include down.jade
+  include navigator/down.jade
 
-if index=="blog"
-  include blog.jade
 
-if index=="blog/hello-world"
-  include blog-helloworld.jade
+
 
 if index=="mainmenu"
   include mainmenu.jade
 
 if index=="es"
-  include esp.jade
+  include es/esp.jade
