--- a/templates/views/pages/wow/wow.jade
+++ b/templates/views/pages/wow/wow.jade
@@ -36,7 +36,7 @@ div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8 darkbox")
   ul(class="list-group list-group-black")
     li(class="list-group-item")
       h4 Full Google Map Page
-      p This is a simple demo of an Ababool Page loaded with AJAX (reloads each time is called)
+      p This is a simple demo of full Google Maps full page
       button(class="btn btn-primary"
       ng-click="gotopage('map',30)"
       ) Request a map
@@ -44,7 +44,7 @@ div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8 darkbox")
   ul(class="list-group list-group-black")
     li(class="list-group-item")
       h4 Youtube
-      p This is a simple demo of an Ababool Page loaded with AJAX (reloads each time is called)
+      p This is a simple demo of page with a youtube video
       button(class="btn btn-primary"
       ng-click="gotopage('youtube',30)"
       ) Request a map
