--- a/templates/ababool_plugins/ababool_theme/_theme.scss
+++ b/templates/ababool_plugins/ababool_theme/_theme.scss
@@ -26,7 +26,7 @@ div#pt-main {
 }
 
 #home {
-  background: url(../images/ababool01.jpg) no-repeat center center fixed;
+  background: url(../images/ababool06.jpg) no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -86,6 +86,34 @@ div#pt-main {
   font-family: monospace;
   font-size: 16px;
   line-height: 23px;
+}
+
+#how {
+  background: url(../images/ababool08.jpg) no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  color: #FFF
+}
+
+#about {
+  background: url(../images/ababool06.jpg) no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  color: #FFF
+}
+
+
+#blog {
+  background: url(../images/ababool07.jpg) no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  color: #FFF
 }
 
 button.btn.ababtn {
@@ -203,6 +231,10 @@ span.link:hover{
 .darkbox a, .darkbox span.link{
   color: #e2e2e2 ;
 }
+.list-group-black a, .list-group-black span.link{
+  color: #006699 ;
+}
+
 .darkbox a{
 }
 .lightbox{
@@ -235,6 +267,12 @@ span.link:hover{
 }
 .mt40{
   margin-top: 40px;
+}
+
+.box4.blogfooter {
+    background-color: #ccc;
+    padding: 20px;
+    margin-top: 20px;
 }
 
 
@@ -278,6 +316,11 @@ code {
     padding: 2px 10px;
 }
 
+ul#mainmenu, div#menu-fullscreen, div#menu-mainmenu {
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 27px;
+    line-height: 29px;
+}
 
 @media screen and (max-width: 480px) {
   h1 {
