--- a/templates/ababool_plugins/blog/blogfooter.jade
+++ b/templates/ababool_plugins/blog/blogfooter.jade
@@ -1,6 +1,25 @@
 
-div(class="blogfooter")
-  | Leave you comments and feedbacks on our feedbacks section <br/>
-  | Leave issues on.. <br/>
-  | Disscuss on ... <br/>
-  | and ...<br/>
+div(class="box4 blogfooter")
+
+    p
+      | This post is written by <span class="link" ng-click="gotopage('about',10)" >Ciro Artigot</span>
+
+    h4 Social
+    p
+      | Follow us on Twitter: <a href="https://twitter.com/ababooljs" target="blank">@ababooljs</a>
+
+    h4(class="mt20") Discussions
+    p
+      | Join the Linked In <a href="https://www.linkedin.com/grp/home?gid=8478122" target="blank">Discussion group</a>
+
+    h4(class="mt20") Email
+    p
+      | Dontact us by email: <a href="mailto:info@algosemueve.es" target="blank">info@algosemueve.es</a>
+
+    h4(class="mt20") Issues
+    p
+      | Please submit issues to <a href="https://github.com/CiroArtigot/ababool/issues" target="blank">Git Hub</a>
+
+    h4(class="mt20") Feedbacks
+    p
+      | <span class="link" ng-click="gotopage('feedbacks',32)">Give us your feedbacks!</span>
