--- a/templates/views/pages/blog/contents.jade
+++ b/templates/views/pages/blog/contents.jade
@@ -6,7 +6,7 @@ if index=="blog"
 if index=="blog/hello-world"
   include helloworld.jade
 
-if index=="blog/todo"
+if index=="blog/to-do"
   include todo.jade
 
 if index=="blog/ababool-restful-api"
