--- a/templates/views/pages/blog/helloworld.jade
+++ b/templates/views/pages/blog/helloworld.jade
@@ -1,6 +1,27 @@
-div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8 darkbox")
+div(class="box col-xs-12 col-sm-12 col-md-12 col-lg-12 lightbox")
   h1 Hello World
   h3
-    | blog post
+    | Ababool MEAN Full-Stack Solution is out!
 
-  div(class="box3")
+  include ../../../ababool_plugins/blog/blogdata.jade
+
+  div(class="box4")
+
+    p
+      | After several months of work Ababol MEAN is out.<br/>
+      | I know there are many pending things to do, new features,
+      | technical improvements, improve the texts, improve the English ..:)<br/>
+      | But it's time to share the work with the world.<br/>
+      | I hope you like it, I think it's a pretty combination of technology and dreams ...<br/>
+
+    h4
+      | A tool, a framework ... to develop ideas.
+
+    p
+      | Espero que os guste y os sirva de ayuda :)<br/>
+      | Ciro
+
+
+
+
+  include ../../../ababool_plugins/blog/blogfooter.jade
