--- a/templates/views/pages/blog/todo.jade
+++ b/templates/views/pages/blog/todo.jade
@@ -1,6 +1,12 @@
-div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8 darkbox")
+div(class="box col-xs-12 col-sm-12 col-md-12 col-lg-12 lightbox")
   h1 Things to do
   h3
-    | Challenges and outstanding things
+    | There will always be many outstanding things to do in Ababool
 
-  div(class="box3")
+  include ../../../ababool_plugins/blog/blogdata.jade
+
+  div(class="box4")
+
+    h4 TODO list :
+
+    p Create a TODO list :)
