--- a/templates/views/pages/footer/about.jade
+++ b/templates/views/pages/footer/about.jade
@@ -1,6 +1,6 @@
-div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8")
+div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8 darkbox")
   h1 About
-  div(class="box4")
+  div(class="box3")
     p
       | Ababool is a personal project of <a href="https://twitter.com/CiroArtigot" target="blank">@ciroartigot</a>
     p
