--- a/templates/views/pages/sections/how.jade
+++ b/templates/views/pages/sections/how.jade
@@ -1,4 +1,4 @@
-div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8 darkbox")
+div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8 lightbox")
   h1 How
   h3
     | Useful documentation to work with Ababool
