--- a/templates/views/pages/footer/contact.jade
+++ b/templates/views/pages/footer/contact.jade
@@ -1,28 +1,25 @@
-div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8")
+div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8 darkbox")
 
-    h1 Contact us
+  h1 Contact us
 
-    div(class="box4")
+  div(class="box3")
 
       h4 Social
       p
-        | Contact us on Twitter: <a href="https://twitter.com/ababooljs" target="blank">@ababooljs</a>
+        | Follow us on Twitter: <a href="https://twitter.com/ababooljs" target="blank">@ababooljs</a>
 
-      h4 Discussions
+      h4(class="mt20") Discussions
       p
-        | <a href="https://www.linkedin.com/grp/home?gid=8478122" target="blank">Discussion group</a>
-        | on Linked In
-        
-      h4 Email
-      p
-        | You can contact us by email: <br/>
-        | <a href="mailto:info@algosemueve.es" target="blank">info@algosemueve.es</a>
+        | Join the Linked In <a href="https://www.linkedin.com/grp/home?gid=8478122" target="blank">Discussion group</a>
 
-      h4 Issues
+      h4(class="mt20") Email
       p
-        | Please submit issues to
-        | <a href="https://github.com/CiroArtigot/ababool/issues" target="blank">Git Hub</a>
+        | Dontact us by email: <a href="mailto:info@algosemueve.es" target="blank">info@algosemueve.es</a>
 
-      h4 Feedbacks
+      h4(class="mt20") Issues
+      p
+        | Please submit issues to <a href="https://github.com/CiroArtigot/ababool/issues" target="blank">Git Hub</a>
+
+      h4(class="mt20") Feedbacks
       p
         | <span class="link" ng-click="gotopage('feedbacks',32)">Give us your feedbacks!</span>
