--- a/templates/views/pages/wow/wow.jade
+++ b/templates/views/pages/wow/wow.jade
@@ -47,4 +47,4 @@ div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8 darkbox")
       p This is a simple demo of page with a youtube video
       button(class="btn btn-primary"
       ng-click="gotopage('youtube',30)"
-      ) Request a map
+      ) Request a video
