--- a/templates/ababool_plugins/ababool_theme/_theme.scss
+++ b/templates/ababool_plugins/ababool_theme/_theme.scss
@@ -81,7 +81,7 @@ div#pt-main {
 }
 
 .blog {
-  background-color: #e2e2e2;
+  background-color: #fff;
   color: #000;
   font-family: monospace;
   font-size: 16px;
@@ -98,7 +98,7 @@ div#pt-main {
 }
 
 #about {
-  background: url(../images/ababool06.jpg) no-repeat center center;
+  background: url(../images/ababool012.jpg) no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -108,7 +108,7 @@ div#pt-main {
 
 
 #blog {
-  background: url(../images/ababool07.jpg) no-repeat center center;
+  background: url(../images/ababool012.jpg) no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -272,7 +272,7 @@ span.link:hover{
 .box4.blogfooter {
     background-color: #ccc;
     padding: 20px;
-    margin-top: 20px;
+    margin-top: 50px;
 }
 
 
