--- a/templates/ababool_plugins/mainmenu/_mainmenu.scss
+++ b/templates/ababool_plugins/mainmenu/_mainmenu.scss
@@ -14,6 +14,7 @@ ul#mainmenu {
     background-color: #fff;
     opacity: 0.8;
     padding: 0;
+      height: 60px;
 }
 ul#mainmenupage {
     padding: 0;
