--- a/templates/views/pages/blog/blog.jade
+++ b/templates/views/pages/blog/blog.jade
@@ -18,15 +18,6 @@ div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8 darkbox")
         h4
           span(
           class="link"
-          ng-click="gotopage('blog/to-do',30)"
-          ) Things to do
-        p
-          | There will always be many outstanding things to do in Ababool
-
-      li(class="list-group-item")
-        h4
-          span(
-          class="link"
           ng-click="gotopage('blog/working-with-pages',30)"
           ) Working with pages
         p
@@ -59,3 +50,12 @@ div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8 darkbox")
           ) Ababool Plugins
         p
           | You can use and create Ababool plugins to increase the project functionality.
+
+      li(class="list-group-item")
+        h4
+          span(
+          class="link"
+          ng-click="gotopage('blog/accelerated-mobile-pages',30)"
+          ) Ababool with AMP HTML
+        p
+          |  Ababool integrates the option of using Accelerated Mobile Pages.
