--- a/templates/views/pages/blog/contents.jade
+++ b/templates/views/pages/blog/contents.jade
@@ -20,3 +20,6 @@ if index=="blog/ababool-comments-system"
 
 if index=="blog/ababool-plugins"
   include ababool-plugins.jade
+
+if index=="blog/accelerated-mobile-pages"
+  include accelerated-mobile-pages.jade
