--- a/templates/views/pages/blog/working-with-pages.jade
+++ b/templates/views/pages/blog/working-with-pages.jade
@@ -201,5 +201,12 @@ div(class="box col-xs-12 col-sm-12 col-md-12 col-lg-12 lightbox")
           | This attribute lets you to create multilingual sites:
           | <span class="link" ng-click="gotopage('es',10)" >spanish Ababool version</span>.
 
+      li(class="list-group-item")
+        h4 amp
+        p
+          | With the amp attribute you activate the AMP HTML pages.<br/>
+          | For example set <code>  "amd" : 1</code> to get a AMP Page:<br/>
+          | <code>http://yoursite.com/amp/your-url</code><br/>
+
 
   include ../../../ababool_plugins/blog/blogfooter.jade
