--- a/templates/views/pages/sections/home.jade
+++ b/templates/views/pages/sections/home.jade
@@ -2,11 +2,31 @@
 div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8")
   h1 Ababool
   h3
-    | An open source, creative and smart<br/>
-    | MEAN Javascript Full-Stack Solution<br/>
-    | for dreaming Single Page Web Applications
+    | Open source and creative<br/>
+    | MEAN Stack Solution<br/>
+    | to dream Single Page Applications
 
-  h3 Ababool likes:
+  h4
+    | Get Ababool by running...
+  p
+    | <code>$&nbsp;sudo&nbsp;npm&nbsp;install&nbsp;-g&nbsp;ababool-generator</code>
+
+  p
+    | <code>$&nbsp;ababool&nbsp;myapp</code>
+
+  p
+    | <code>$&nbsp;cd&nbsp;myapp</code>
+
+  p
+    | <code>$&nbsp;npm&nbsp;install</code>
+
+  p
+    | <code>$&nbsp;gulp</code>
+
+  p
+    | <code>$&nbsp;npm&nbsp;start</code>
+
+  h4(class="mt30") Ababool stands for:
 
   h4(class="mt20") Nodejs
   p Event-driven I/O server-side JavaScript environment based on V8.
@@ -14,17 +34,17 @@ div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8")
   h4(class="mt20") Express
   p Fast, unopinionated, minimalist web framework
 
-  h4(class="mt20") Gulp
-  p The streaming build system
-
-  h4(class="mt20") Bower
-  p The browser package manager
-
   h4(class="mt20") Mongodb
   p The leading NoSQL database, empowering businesses to be more agile and scalable.
 
   h4(class="mt20") Angularjs
   p AngularJS is what HTML would have been, had it been designed for building web-apps.
+
+  h4(class="mt20") Gulp
+  p The streaming build system
+
+  h4(class="mt20") Bower
+  p The browser package manager
 
   h4(class="mt20") Sass
   p An extension of CSS that adds power and elegance to the basic language.
