--- a/templates/ababool_plugins/blog/_blog.scss
+++ b/templates/ababool_plugins/blog/_blog.scss
@@ -1,5 +1,11 @@
 
+
 .blogdata {
-    color: #666;
+    color: #999;
     font-style: italic;
+    margin-bottom: 15px;
+    background-color: #f2f2f2;
+    display: inline-block;
+    padding: 5px;
+    font-size: 0.9em;
 }
