--- a/templates/views/amp/google-analytics.html
+++ b/templates/views/amp/google-analytics.html
@@ -2,7 +2,7 @@
 <script type="application/json">
 {
   "vars": {
-    "account": "UA-XXXXX-Y"
+    "account": "UA-xxxx-1"
   },
   "triggers": {
     "trackPageview": {
