--- a/templates/views/pages/contents.jade
+++ b/templates/views/pages/contents.jade
@@ -78,8 +78,8 @@ if index=="up"
 if index=="down"
   include navigator/down.jade
 
-
-
+if index=="tag"
+  include tags/tag.jade
 
 if index=="mainmenu"
   include mainmenu.jade
