--- a/templates/views/pages/tags/tag.jade
+++ b/templates/views/pages/tags/tag.jade
@@ -1,7 +1,9 @@
-div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8 darkbox")
-  h1 Blog
+div(class="box col-xs-12 col-sm-12 col-md-12 col-lg-12")
 
-  div(class="box3")
+  h1 #{params[0].title}
+
+  div(class="box4")
+
     ul(class="list-group list-group-transparent")
 
       each post in data
