--- a/templates/ababool_plugins/ababool_theme/_theme.scss
+++ b/templates/ababool_plugins/ababool_theme/_theme.scss
@@ -26,7 +26,7 @@ div#pt-main {
 }
 
 #home {
-  background: url(../images/ababool06.jpg) no-repeat center center;
+  background: url(../images/ababool020.jpg) no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -106,7 +106,6 @@ div#pt-main {
   color: #FFF
 }
 
-
 #blog {
   background: url(../images/ababool012.jpg) no-repeat center center;
   -webkit-background-size: cover;
@@ -114,6 +113,14 @@ div#pt-main {
   -o-background-size: cover;
   background-size: cover;
   color: #FFF
+}
+
+a.tag {
+    margin-right: 5px;
+}
+
+a.btn.btn-default {
+    color: #333;
 }
 
 button.btn.ababtn {
@@ -235,6 +242,19 @@ span.link:hover{
   color: #006699 ;
 }
 
+ul.list-group-transparent{
+  background-color: inherit;
+}
+
+ul.list-group-transparent li.list-group-item {
+    background-color: inherit;
+    padding: 0;
+    border: 0;
+    padding-top: 20px;
+    padding-left: 5px;
+}
+
+
 .darkbox a{
 }
 .lightbox{
@@ -310,10 +330,20 @@ fieldset.files pre {
     line-height: 16px;
 }
 
+tag {
+  margin-right: 5px;
+}
+
 code {
     font-family: Courier;
     font-size: 14px;
     padding: 2px 10px;
+}
+
+.goback {
+    background-color: #fff;
+    display: table;
+    padding: 5px;
 }
 
 ul#mainmenu, div#menu-fullscreen, div#menu-mainmenu {
