--- a/templates/views/pages/amp/blog/helloworld.jade
+++ b/templates/views/pages/amp/blog/helloworld.jade
@@ -1,9 +1,13 @@
-div(class="box col-xs-12 col-sm-12 col-md-12 col-lg-12 lightbox")
+div(class="box")
+  p(class="breadcrumb")
+    | This post is published on <a href="/">Ababool</a> > <a href="/blog">Blog</a>
+
   h1 Hello World
+
   h3
     | Ababool MEAN Full-Stack is out!
 
-  include ../../../ababool_plugins/blog/blogdata.jade
+  include ../../../../ababool_plugins/blog/blogdata_amp.jade
 
   div(class="box4")
 
@@ -18,4 +22,4 @@ div(class="box col-xs-12 col-sm-12 col-md-12 col-lg-12 lightbox")
       | A tool, a framework ... to develop ideas.
 
 
-  include ../../../ababool_plugins/blog/blogfooter.jade
+  include ../../../../ababool_plugins/blog/blogfooter_amp.jade
