--- a/templates/views/pages/amp/contents.jade
+++ b/templates/views/pages/amp/contents.jade
@@ -4,3 +4,21 @@ if index=="blog"
 
 if index=="blog/accelerated-mobile-pages"
   include blog/accelerated-mobile-pages.jade
+
+if index=="blog/hello-world"
+  include blog/helloworld.jade
+
+if index=="blog/ababool-restful-api"
+  include blog/ababool-restful-api.jade
+
+if index=="blog/ababool-comments-system"
+  include blog/ababool-comments-system.jade
+
+if index=="blog/working-with-pages"
+  include blog/working-with-pages.jade
+
+if index=="blog/ababool-plugins"
+  include blog/ababool-plugins.jade
+
+if index=="tag"
+  include tags/tag.jade
