--- a/templates/views/pages/amp/tags/tag.jade
+++ b/templates/views/pages/amp/tags/tag.jade
@@ -2,7 +2,7 @@ div(class="box")
   p(class="breadcrumb")
     | This post is published on <a href="/">Ababool</a> > <a href="/blog">Blog</a>
 
-  h1 Blog
+  h1 #{params[0].title}
 
   div(class="box4")
     each post in data
